@@ -17,15 +17,18 @@
 package com.jayway.restassured.internal
 
 import com.jayway.restassured.authentication.AuthenticationScheme
+import com.jayway.restassured.authentication.FormAuthScheme
 import com.jayway.restassured.authentication.NoAuthScheme
 import com.jayway.restassured.filter.Filter
 import com.jayway.restassured.http.ContentType
 import com.jayway.restassured.internal.filter.FilterContextImpl
+import com.jayway.restassured.internal.filter.FormAuthFilter
 import com.jayway.restassured.internal.filter.RootFilter
 import com.jayway.restassured.internal.mapping.ObjectMapperSerializationContextImpl
 import com.jayway.restassured.internal.mapping.ObjectMapping
 import com.jayway.restassured.mapper.ObjectMapper
 import com.jayway.restassured.mapper.ObjectMapperType
+import com.jayway.restassured.spi.AuthFilter
 import org.apache.commons.lang3.StringUtils
 import org.apache.commons.lang3.Validate
 import org.apache.http.HttpEntity
@@ -712,6 +715,17 @@ class RequestSpecificationImpl implements FilterableRequestSpecification {
     }
 
     def invokeFilterChain(path, method, assertionClosure) {
+        if(authenticationScheme instanceof NoAuthScheme && !(defaultAuthScheme instanceof NoAuthScheme)) {
+            // Use default auth scheme
+            authenticationScheme = defaultAuthScheme
+        }
+
+        if (authenticationScheme instanceof FormAuthScheme) {
+            // Form auth scheme is handled a bit differently than other auth schemes since it's implemented by a filter.
+            def formAuthScheme =  authenticationScheme as FormAuthScheme
+            filters.removeAll { AuthFilter.class.isAssignableFrom(it.getClass())  }
+            filters << new FormAuthFilter(userName: formAuthScheme.userName,password: formAuthScheme.password, config: formAuthScheme.config)
+        }
         filters << new RootFilter()
         def ctx = new FilterContextImpl(assembleCompleteTargetPath(path), path, method, assertionClosure, filters);
         def response = ctx.next(this, responseSpecification)
@@ -743,11 +757,6 @@ class RequestSpecificationImpl implements FilterableRequestSpecification {
         restAssuredResponse.setConnectionConfig(connectionConfig())
         responseSpecification.restAssuredResponse = restAssuredResponse
         def responseContentType =  assertionClosure.getResponseContentType()
-
-        if(authenticationScheme instanceof NoAuthScheme && !(defaultAuthScheme instanceof NoAuthScheme)) {
-            // Use default auth scheme
-            authenticationScheme = defaultAuthScheme
-        }
 
         authenticationScheme.authenticate(http)
 
