@@ -1,6 +1,7 @@
 Change log next version
 -----------------------
 * Added methods object variants of setBody and setContent to RequestSpecBuilder.
+* Fixed so that form authentication can be added from RequestSpecBuilder.
 
 Change log 1.7 (2012-10-11)
 ---------------------------
